[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/projectile.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/meow hit.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.00794685, 0.249512 ), 0.0, 0.0, 0, 0, Vector2( 0.997215, 0.467529 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 20, 20, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 6.96
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 19.36
initial_velocity_random = 0.0
angular_velocity = 2.6
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 4.89
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 6.46
scale_random = 0.0
scale_curve = SubResource( 4 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 5.62
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Gravity", "Initial Velocity", "Scale", "Spread" ]

[sub_resource type="Animation" id=6]

resource_name = "hit"
length = 0.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": ""
} ]
}

[node name="projectile" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="collisionArea" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisionArea" index="0"]

position = Vector2( 0.285986, 0.398994 )
scale = Vector2( 1.60191, 1.43442 )
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="." index="3"]

position = Vector2( 5.31533, 2.80595 )
scale = Vector2( 0.636891, 0.661929 )
emitting = true
amount = 12
lifetime = 1.0
one_shot = false
preprocess = 0.02
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hit = SubResource( 6 )
blend_times = [  ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="collisionArea" to="." method="_on_collisionArea_body_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


